# METIS

ParMETIS/: CHANGES  CMakeLists.txt  Changelog  INSTALL  Makefile  Makefile.in  README  VERSION  coarsen.c  comm.c  debug.c  defs.h  drivers.c  edge_refine.c  fold.c  initdiff.c  initmsection.c  initpart.c  kmetis.c  macros.h  memory.c  mmd.c  move.c  myqsort.c  node_refine.c  order.c  par_kmetis.h  parmetis.h  pqueue.c  proto.h  rename.h  serkmetis.c  serometis.c  setup.c  struct.h  util.c  xyzpart.c
src/: BUGFIXES  CHANGES  CMakeLists.txt  Changelog  FILES  GKlib.c  GKlib.h  INSTALL  Makefile  Makefile.in  Makefile.lib  VERSION  balpart.c  bucketlist.c  coarsen.c  defs.h  entrypoint.c  fm.c  htable.c  initpart.c  io.c  kwayfm.c  kwaygreedy.c  kwaypart.c  lanczos.c  list.c  macros.h  main.c  match.c  (+13 more)
src/mt-metis/: CMakeLists.txt  Changelog  Makefile  README.md  README.txt  animikii.c  check.c  coarsen.c  configure  defs.h  graph.c  includes.h  io.c  kwayrefine.c  mem.c  mt-metis  proto.h  struct.h  util.c
src/mt-metis/bowstring/: CMakeLists.txt  Changelog  Makefile  configure  mkpkg.sh
src/mt-metis/bowstring/domlib/: LICENSE  dlbuffer_headers.h  dlcb_headers.h  dldjset_headers.h  dldpq_headers.h  dlenv.c  dlfile.c  dlheap_headers.h  dlht_funcs.h  dllist_funcs.h  dllist_headers.h  dlmacros.h  dlmath_funcs.h  dlmath_headers.h  dlmem_headers.h  dlpq_headers.h  dlrand_headers.h  dlsort_funcs.h  dlsort_headers.h  dlsortkv_funcs.h  dlstats_headers.h  dlterm.h  dltree_funcs.h  dltree_headers.h  dlutil.h  domlib.c
src/mt-metis/bowstring/domlib/test/: Makefile  buffer_add.c  buffer_clearreset.c  cmdline_parse.c  dldpq_fill.c  file_get_next_line.c  hashtable_create.c  hashtable_get.c  heap_pop.c  heap_push.c  list_linked_create.c  list_linked_replace.c  macros_clz.c  math_blockcyclicperm.c  math_differentiate.c  math_downpow2.c  math_incset.c  math_prefixshift.c  math_prefixsum_inc.c  math_reversebits.c  math_reversebits.test  math_set_max.c  math_stable_sum.c  math_sum.c  mem_copy.c  mem_duplicate.c  mem_r_sym_calloc.c  omp_combuffer_add.c  omp_combuffer_send.c  omp_reduction_sumareduce.c  priority_queue_delete.c  priority_queue_max.c  rand_pseudo_shuffle.c  rand_shuffle.c  search_binary.c  set_djset_findjoin.c  set_iset_add.c  set_iset_remove.c  set_iset_remove_index.c  sort_counting_v.c  (+5 more)
src/mt-metis/bowstring/include/: CMakeLists.txt  bowstring.h  bowstring_dynamic.h
src/mt-metis/bowstring/src/: CMakeLists.txt  analyze.c  analyze.h  base.c  base.h  bowstring.c  bowstring_bin.c  coordinates.c  coordinates.h  cut.c  cut.h  dynamic.c  flow.c  flow.h  generate.c  generate.h  graph.c  graph.h  order.c  order.h  permute.c  permute.h  sparsen.c  sparsen.h  strings.h  tree.c  tree.h
src/mt-metis/bowstring/src/io/: bscomp_funcs.h  cloud9.c  cloud9.h  csr.c  csr.h  dimacs.c  dimacs.h  io.c  io.h  matrix.c  matrix.h  metis.c  metis.h  nerstrand.c  nerstrand.h  snap.c  snap.h  stp.c  stp.h
src/mt-metis/bowstring/src/mpi/: CMakeLists.txt  pushrelabel.c
src/mt-metis/domlib/: Makefile  dlbuffer_funcs.h  dlcb_funcs.h  dlcmdline.c  dlcmdline.h  dldebug.h  dldefs.h  dldjset_funcs.h  dldpq_funcs.h  dlenv.h  dlfile.h  dlgklib.h  dlheap_funcs.h  dlht_headers.h  dliset_funcs.h  dliset_headers.h  dlmem_funcs.h  dlomp.h  dlpq_funcs.h  dlprint.h  dlrand_funcs.h  dlrand_headers.h  dlsort.h  dlsortkv_headers.h  dlstats_funcs.h  dlstring.c  dlstring.h  dlterm.c  dlthread.c  dlthread.h  dlthread_reduction_funcs.h  dlthread_reduction_headers.h  dlutil.c  domlib.h
src/mt-metis/domlib/test/: dldpq_inc.c  dldpq_remove.c  hashtable_contains.c  hashtable_put.c  hashtable_remove.c  list_linked_get.c  list_linked_pushpop.c  math_cyclicperm.c  math_intersection_size.c  math_max_index.c  math_min_index.c  math_min_value.c  math_prefixsum_exc.c  math_product.c  math_set_min.c  math_uppow2.c  mem_calloc.c  mem_r_dalloc.c  mem_realloc.c  mem_set.c  omp_combuffer_clear.c  omp_combuffer_create.c  omp_reduction_init.c  priority_queue_clear.c  priority_queue_peek.c  priority_queue_pushpop.c  priority_queue_update.c  set_iset_populate.c  sort_insertion.c  sort_radix.c  string_endswith.c  test.h
src/mt-metis/include/: mtmetis.h
src/mt-metis/metis/: Makefile
src/mt-metis/metis/GKlib/: random.c
src/mt-metis/metis/libmetis/: balance.c  coarsen.c  debug.c  defs.h  fm.c  gklib_rename.h  initpart.c  kmetis.c  kwayfm.c  kwayrefine.c  mesh.c  meshpart.c  ometis.c  options.c  parmetis.c  pmetis.c  proto.h  refine.c  rename.h  sfm.c  srefine.c  struct.h  util.c  wspace.c
src/mt-metis/src/: CMakeLists.txt  Makefile  aggregate.c  aggregate.h  animikii.h  base.c  base.h  check.c  check.h  coarsen.c  coarsen.h  contract.c  contract.h  ctrl.c  ctrl.h  eseprefine.c  eseprefine.h  esinfo.c  esinfo.h  graph.c  graph.h  imetis.c  imetis.h  includes.h  initpart.c  initpart.h  internal.c  internal.h  kpart.c  kwayfm.c  kwayrefine.c  kwayrefine.h  kwinfo.c  kwinfo.h  macros.h  mtmetis.c  mtmetis_bin.c  order.c  order.h  partition.c  (+14 more)
src/mt-metis/wildriver/: .CMakeLists.txt.swp  CMakeLists.txt  ChangeLog  doxygen.conf.in
src/mt-metis/wildriver/include/: wildriver.h
src/mt-metis/wildriver/src/: CSRFile.cpp  CSRFile.hpp  DenseMatrixFile.cpp  DenseMatrixFile.hpp  Exception.hpp  GraphFactory.cpp  GraphFactory.hpp  GraphFile.cpp  GraphFile.hpp  GraphInHandle.cpp  GraphInHandle.hpp  GraphOutHandle.cpp  GraphOutHandle.hpp  GraphTextFile.cpp  GraphTextFile.hpp  IDenseMatrixFile.hpp  IDenseMatrixReader.hpp  IDenseMatrixWriter.hpp  IGraphFile.hpp  IGraphReader.hpp  IGraphWriter.hpp  IMatrixFile.hpp  IMatrixReader.hpp  IMatrixWriter.hpp  IVectorFile.hpp  IVectorReader.hpp  IVectorWriter.hpp  Matrix.hpp  MatrixEntry.hpp  MatrixFactory.cpp  MatrixFactory.hpp  MatrixFile.cpp  MatrixFile.hpp  MatrixGraphFile.cpp  MatrixGraphFile.hpp  MatrixInHandle.cpp  MatrixInHandle.hpp  MatrixOutHandle.cpp  MatrixOutHandle.hpp  MatrixTextFile.cpp  (+16 more)
src/mt-metis/wildriver/src/test/: CSRFile_test.cpp  DomTest.hpp  GraphInHandle_test.cpp  GraphOutHandle_test.cpp  MatrixOutHandle_test.cpp  MetisFile_test.cpp  PlainVectorFile_test.cpp  WildRiver_test.cpp
(+405 files in other folders)
